[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1.1"
rltk = { version = "0.8.1", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
specs = { version = "0.18.0", features = ["serde"] }
specs-derive = "0.4.1"
